[tool.poetry]
name = "repl_python3_beta_magicthegathering"
version = "0.1.0"
description = ""
authors = ["baptisteguerny <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncssh = "^2.7.2"
configparser = "^5.0.2"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
